[gd_scene load_steps=41 format=3 uid="uid://bp0b4xkr7nwed"]

[ext_resource type="Script" uid="uid://b37oioeh1rnly" path="res://sources/minigames/monkeys/monkey.gd" id="1_cvvgu"]
[ext_resource type="Texture2D" uid="uid://cgf8gkpp0hpuf" path="res://assets/minigames/monkeys/graphic/stunned_00.png" id="2_6848f"]
[ext_resource type="Texture2D" uid="uid://d0jobqj4fvrwy" path="res://assets/minigames/monkeys/graphic/monkey_spritesheet.png" id="2_awb1x"]
[ext_resource type="Texture2D" uid="uid://bvd3a7sqts1r4" path="res://assets/minigames/monkeys/graphic/stunned_01.png" id="3_8nt41"]
[ext_resource type="PackedScene" uid="uid://2mwfjg3c68p1" path="res://sources/minigames/monkeys/coconut.tscn" id="3_tws3c"]
[ext_resource type="Texture2D" uid="uid://bh28uja7gs8u4" path="res://assets/minigames/monkeys/graphic/coconut.png" id="4_8r7im"]
[ext_resource type="Texture2D" uid="uid://dk26el7ws6d2j" path="res://assets/minigames/monkeys/graphic/stunned_02.png" id="4_yysvf"]
[ext_resource type="Texture2D" uid="uid://droijuh1ny7q4" path="res://assets/minigames/monkeys/graphic/stunned_03.png" id="5_nogsj"]
[ext_resource type="Texture2D" uid="uid://cemh8hixdbh6w" path="res://assets/minigames/monkeys/graphic/stunned_04.png" id="6_07xob"]
[ext_resource type="Texture2D" uid="uid://b8vkcmm1amyl5" path="res://assets/minigames/monkeys/graphic/stunned_05.png" id="7_cqirh"]
[ext_resource type="Texture2D" uid="uid://dt3pil0041p2c" path="res://assets/minigames/monkeys/graphic/stunned_06.png" id="8_bqihf"]
[ext_resource type="Texture2D" uid="uid://ci5elguo33dtu" path="res://assets/minigames/monkeys/graphic/stunned_07.png" id="9_kvu7a"]
[ext_resource type="Texture2D" uid="uid://2fu36atb0no2" path="res://assets/minigames/monkeys/graphic/stunned_08.png" id="10_osi05"]
[ext_resource type="Texture2D" uid="uid://ugv8mre58ihd" path="res://assets/minigames/monkeys/graphic/stunned_09.png" id="11_6k358"]
[ext_resource type="Texture2D" uid="uid://bt4ttcxkp56kh" path="res://assets/minigames/monkeys/graphic/stunned_10.png" id="12_l6b7q"]
[ext_resource type="Texture2D" uid="uid://bvercbqrcb0lt" path="res://assets/minigames/monkeys/graphic/stunned_11.png" id="13_lbgqc"]
[ext_resource type="Texture2D" uid="uid://bcxl33adbfcdx" path="res://assets/minigames/monkeys/graphic/stunned_12.png" id="14_iqadn"]
[ext_resource type="Texture2D" uid="uid://hm5etiiy88dy" path="res://assets/minigames/monkeys/graphic/stunned_13.png" id="15_iwb7o"]
[ext_resource type="Texture2D" uid="uid://y3pftagev00e" path="res://assets/minigames/monkeys/graphic/stunned_14.png" id="16_fu3xs"]
[ext_resource type="Texture2D" uid="uid://bahcmlqnc3lb5" path="res://assets/minigames/monkeys/graphic/stunned_15.png" id="17_io6kh"]
[ext_resource type="Texture2D" uid="uid://cx2wrsp34gocj" path="res://assets/minigames/monkeys/graphic/stunned_16.png" id="18_hl1xy"]
[ext_resource type="Texture2D" uid="uid://c4ey737pdl0h8" path="res://assets/minigames/monkeys/graphic/stunned_17.png" id="19_1bn1b"]
[ext_resource type="FontFile" uid="uid://bw8cb4e0a7ayj" path="res://assets/fonts/kalulu_mulish_regular.otf" id="23_l0op8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eq3s8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6848f")
}, {
"duration": 1.0,
"texture": ExtResource("3_8nt41")
}, {
"duration": 1.0,
"texture": ExtResource("4_yysvf")
}, {
"duration": 1.0,
"texture": ExtResource("5_nogsj")
}, {
"duration": 1.0,
"texture": ExtResource("6_07xob")
}, {
"duration": 1.0,
"texture": ExtResource("7_cqirh")
}, {
"duration": 1.0,
"texture": ExtResource("8_bqihf")
}, {
"duration": 1.0,
"texture": ExtResource("9_kvu7a")
}, {
"duration": 1.0,
"texture": ExtResource("10_osi05")
}, {
"duration": 1.0,
"texture": ExtResource("11_6k358")
}, {
"duration": 1.0,
"texture": ExtResource("12_l6b7q")
}, {
"duration": 1.0,
"texture": ExtResource("13_lbgqc")
}, {
"duration": 1.0,
"texture": ExtResource("14_iqadn")
}, {
"duration": 1.0,
"texture": ExtResource("15_iwb7o")
}, {
"duration": 1.0,
"texture": ExtResource("16_fu3xs")
}, {
"duration": 1.0,
"texture": ExtResource("17_io6kh")
}, {
"duration": 1.0,
"texture": ExtResource("18_hl1xy")
}, {
"duration": 1.0,
"texture": ExtResource("19_1bn1b")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_64f28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.48787e-16]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Marker2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cp6hn"]
resource_name = "finish_throw"
length = 0.250012
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, -180)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3amr0"]
resource_name = "grab"
length = 0.571443
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(3, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.357143, 0.428571, 0.5, 0.571429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-25, -42), Vector2(-25, -42), Vector2(-58, -61), Vector2(-91, -80), Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.357143, 0.428571, 0.5, 0.571429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.475, 0.475), Vector2(0.475, 0.475), Vector2(0.65, 0.65), Vector2(0.825, 0.825), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.357143),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_fm776"]
resource_name = "hit"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.261799, -0.10472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-74, -151), Vector2(-121, -61)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y7l2o"]
resource_name = "idle"
length = 0.857157
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-124, -99), Vector2(-121, -79), Vector2(-121, -79), Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0837758, -0.0837758, 0.0]
}

[sub_resource type="Animation" id="Animation_c3yrh"]
resource_name = "idle_blink"
length = 0.857157
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-124, -99), Vector2(-121, -79), Vector2(-121, -79), Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0837758, -0.0837758, 0.0]
}

[sub_resource type="Animation" id="Animation_0o2xa"]
resource_name = "start_throw"
length = 0.375012
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.625),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.625),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-124, -99), Vector2(-72, -144), Vector2(-192, -180)]
}

[sub_resource type="Animation" id="Animation_ol2dg"]
resource_name = "stunned"
length = 0.857157
loop_mode = 1
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-121, -61)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.10472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_vwrnb"]
resource_name = "talk"
length = 0.428586
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.428571),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0628319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnatx"]
_data = {
&"RESET": SubResource("Animation_64f28"),
&"finish_throw": SubResource("Animation_cp6hn"),
&"grab": SubResource("Animation_3amr0"),
&"hit": SubResource("Animation_fm776"),
&"idle": SubResource("Animation_y7l2o"),
&"idle_blink": SubResource("Animation_c3yrh"),
&"start_throw": SubResource("Animation_0o2xa"),
&"stunned": SubResource("Animation_ol2dg"),
&"talk": SubResource("Animation_vwrnb")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4bmj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3dnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7lt8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma8s2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cbnv3"]

[sub_resource type="GDScript" id="GDScript_fxkfh"]
script/source = "extends Button

@warning_ignore(\"UNUSED_SIGNAL\")
signal dragging()

@onready var drag_preview_model: TextureRect = $DragPreview


		
"

[node name="Monkey" type="Node2D"]
script = ExtResource("1_cvvgu")

[node name="Stars" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -232)
sprite_frames = SubResource("SpriteFrames_eq3s8")
autoplay = "default"
frame_progress = 0.635856

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_awb1x")
offset = Vector2(2.08165e-12, -54)
hframes = 6
vframes = 9
frame = 48

[node name="Marker2D" type="Marker2D" parent="."]
visible = false
position = Vector2(-124, -99)
gizmo_extents = 20.0

[node name="Coconut" parent="Marker2D" instance=ExtResource("3_tws3c")]

[node name="HitPosition" type="Marker2D" parent="."]
position = Vector2(-74, -151)
rotation = 0.261799
gizmo_extents = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rnatx")
}
autoplay = "idle"

[node name="Button" type="Button" parent="."]
offset_left = -182.0
offset_top = -220.0
offset_right = 81.0
offset_bottom = 1.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_d4bmj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i3dnl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o7lt8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ma8s2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cbnv3")
script = SubResource("GDScript_fxkfh")

[node name="DragPreview" type="TextureRect" parent="Button"]
visible = false
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_8r7im")

[node name="Label" type="Label" parent="Button/DragPreview"]
custom_minimum_size = Vector2(110, 2.08165e-12)
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 117.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("23_l0op8")
theme_override_font_sizes/font_size = 70
text = "ent"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="dragging" from="Button" to="." method="_on_button_dragging"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="tree_exiting" from="Button/DragPreview" to="." method="_on_drag_preview_tree_exiting"]
